Fix jumpy scrollbar

--- a/public/style.css
+++ b/public/style.css
@@ -14,7 +14,12 @@
 }
 
 /* General styling */
-body, html, * {
+
+html {
+    margin-left: calc(100vw - 100%);
+}
+
+* {
     font-family: sans-serif;
     margin: 0;
     box-sizing: border-box;
